@@ -1,5 +1,12 @@
 This is a history of major changes to {my wmii configuration}[http://people.ucsc.edu/~skurapat/wmii.html].
 
+
+= 2006-09-16
+
+* Fixed toggling of maximization of currently focused client, via toggle_maximize in rc.rb.
+  * Thanks to Fredrik for reporting this bug.
+
+
 = 2006-09-15
 
 * Added Wmii.get_view and Wmii.get_client methods, to further minimize hard-coded IXP file system paths. This will make it easier to upgrade to wmii-4 later on.
